# ui_recomender

./: .dockerignore  .gitignore  CLAUDE.md  README.md
.github/workflows/: check.yml
backend/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/core/: __init__.py  config.py  exceptions.py  middleware.py
backend/app/di/: __init__.py  container.py  dependencies.py
backend/app/domain/: __init__.py
backend/app/infra/: __init__.py  k8s_client.py  log_stream_client.py  s3_client.py
backend/app/model/: __init__.py  base.py  job.py  session.py
backend/app/repository/: __init__.py  database.py  iteration_repository.py  job_repository.py  proposal_repository.py  protocols.py  session_repository.py  setting_repository.py
backend/app/repository/mock/: __init__.py  mock_iteration_repository.py  mock_proposal_repository.py  mock_session_repository.py
backend/app/router/: __init__.py  api.py  jobs.py  sessions.py  settings.py
backend/app/schema/: __init__.py  job_schema.py  session_schema.py  setting_schema.py
backend/app/service/: __init__.py  artifact_service.py  k8s_service.py  log_stream_service.py  s3_service.py
backend/app/usecase/: __init__.py  job_usecase.py  session_usecase.py  test_session_usecase.py
backend/app/workflow/: __init__.py  analyzer_graph.py  create_pr_graph.py  implementation_graph.py  session_analyzer_graph.py  session_create_pr_graph.py  session_implementation_graph.py  state.py
backend/migration/: env.py
backend/migration/versions/: 199f015d6e7d_add_job_proposal_setting_tables.py  a1b2c3d4e5f6_add_pr_fields_to_proposals.py  b2c3d4e5f6g7_add_job_chaining_columns.py  c3d4e5f6g7h8_add_session_iteration_tables.py  d4e5f6g7h8i9_add_device_type_to_iterations.py
backend/tests/: conftest.py  test_api.py  test_repository.py
docker/: orchestrator.Dockerfile  prompts.py  take-screenshot.mjs  worker-analyze.py  worker-createpr.py  worker-entrypoint.sh  worker-implement.py  worker.Dockerfile  worker_common.py
frontend/: .prettierignore  README.md  package-lock.json  package.json
frontend/src/: index.css  main.tsx
frontend/src/components/: DiffViewer.tsx  Layout.tsx  LogPanel.tsx  ProposalCard.tsx  ScreenshotComparison.tsx  Sidebar.tsx  StatusBadge.tsx
frontend/src/hooks/: useJobPolling.ts  useLayoutContext.ts  useLogStream.ts  useSessionPolling.ts
frontend/src/pages/: About.tsx  Dashboard.tsx  ErrorPage.tsx  Home.tsx  JobDetail.tsx  SessionDetail.tsx  Settings.tsx
frontend/src/services/: api.ts
k8s/: kind-config.yaml  secrets.yaml  worker-job.yaml
scripts/: setup-kind.sh
