[project]
name = "backend"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0,<1.0.0",
    "sqlalchemy>=2.0.46,<3.0.0",
    "uvicorn>=0.40.0,<1.0.0",
    "pydantic-settings>=2.13.0,<3.0.0",
    "psycopg2-binary>=2.9.11,<3.0.0",
    "alembic>=1.18.4,<2.0.0",
]


[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
